--- a/test/nizzaTestApp/app/assets/stylesheets/nice.css.scss
+++ b/test/nizzaTestApp/app/assets/stylesheets/nice.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Nice controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$container-color: rgba(255,0,100,0.4);
+
+div{
+	padding: 5px;
+	margin: 5px;
+	background-color: $container-color;
+	border: dashed 1px #222;
+}
