--- a/test/nizzaTestApp/app/views/layouts/application.html.erb
+++ b/test/nizzaTestApp/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<%= yield %>
+This is the application container
+<%= content_for?(:content) ? yield(:content) : yield %>
 
 </body>
 </html>
