--- a/test/nizzaTestApp/app/views/nice/simple.html.erb
+++ b/test/nizzaTestApp/app/views/nice/simple.html.erb
@@ -1,29 +1,6 @@
 <% content_for :container1 do %>
-	<div>
-		<div data-state="get_nice_simple">
-			<h2>Inside Container 1</h2>
-		</div>
-	</div>	
-	
+	<h2>Simple Inside Container 1</h2>
 <% end %>
 <% content_for :container2 do %>
-	<div>
-		<div data-state="get_nice_simple">
-			<h2>Inside Container 2</h2>
-		</div>
-	</div>
-<% end %>
-<% content_for :container3 do %>
-	<div>
-		<div data-state="get_nice_simple">
-			<h2>Inside Container 3</h2>
-		</div>
-	</div>
-<% end %>
-<% content_for :container4 do %>
-	<div>
-		<div data-state="get_nice_simple">
-			<h2>Inside Container 4</h2>
-		</div>	
-	</div>
+	<h2>Simple Inside Container 2</h2>
 <% end %>
