--- a/test/nizzaTestApp/app/views/layouts/nice.html.erb
+++ b/test/nizzaTestApp/app/views/layouts/nice.html.erb
@@ -1,19 +1,19 @@
 <% content_for :content do %>
-	<div>
-		<h1>Container 1</h1>
-		<%= yield(:container1) %>
+
+	<div>		
+		<div data-state="get_nice_many">
+			<h1>Only Many</h1>
+			<%= yield(:container1) %>
+		</div>
+		<div data-state="get_nice_simple">
+			<h1>Only Simple</h1>
+			<%= yield(:container1) %>
+		</div>
 	</div>
 	<div>
-		<h1>Container 2</h1>
+		<h1>Simple and Many with different content</h1>
 		<%= yield(:container2) %>
 	</div>
-	<div>
-		<h1>Container 3</h1>
-		<%= yield(:container3) %>
-	</div>
-	<div>
-		<h1>Container 4</h1>
-		<%= yield(:container4) %>
-	</div>
 <% end %>
+
 <%= render :template => 'layouts/application' %>
