--- a/test/nizzaTestApp/app/views/layouts/application.html.erb
+++ b/test/nizzaTestApp/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
 </head>
 <body>
 
-This is the application container
-<%= content_for?(:content) ? yield(:content) : yield %>
+<div id="meat">
+	This is the application container
+	<%= content_for?(:content) ? yield(:content) : yield %>
+</div>
 
 </body>
 </html>
