--- a/test/nizzaTestApp/app/views/layouts/nice.html.haml
+++ b/test/nizzaTestApp/app/views/layouts/nice.html.haml
@@ -9,7 +9,7 @@
     .hello
       %p ein bisschen witz
     - 3.times do
-      %div{"data-state" => "get_nice_simple"}
+      %div{"data-state" => "get_nice_simple get_nice_many"}
         %h1 Test 2
     %h1 Simple and Many with different content
     = yield(:container2)
