--- a/test/nizzaTestApp/app/views/nice/many.html.haml
+++ b/test/nizzaTestApp/app/views/nice/many.html.haml
@@ -2,4 +2,5 @@
   %h2 Many Inside Container 1
   = link_to 'go simple','simple', :remote => true
 - content_for :container2 do
-  %h2 Many Inside Container 2
+  .two
+    %h2 Many Inside Container 2
