--- a/test/nizzaTestApp/app/views/nice/simple.html.haml
+++ b/test/nizzaTestApp/app/views/nice/simple.html.haml
@@ -1,4 +1,5 @@
 - content_for :container1 do
   %h2 Simple Inside Container 1
 - content_for :container2 do
-  %h2 Simple Inside Container 2
+  .one
+    %h2 Simple Inside Container 2
