--- a/test/nizzaTestApp/app/views/nice/simple.html.haml
+++ b/test/nizzaTestApp/app/views/nice/simple.html.haml
@@ -1,5 +1,7 @@
 - content_for :container1 do
   %h2 Simple Inside Container 1
+  = link_to 'go simple','simple', :remote => true
 - content_for :container2 do
   .one
     %h2 Simple Inside Container 2
+    = Time.now
