--- a/test/nizzaTestApp/app/views/basic/a.html.haml
+++ b/test/nizzaTestApp/app/views/basic/a.html.haml
@@ -1,7 +1,5 @@
 - content_for :container1 do
-  %h2 State A
-  = link_to 'go simple', b_basic_index_path, :remote => true
+  state a, time now: 
+  = Time.now
 - content_for :container2 do
-  .two
-    %h2 State A
-    = Time.now    
+  %p state a    
