--- a/test/nizzaTestApp/app/views/layouts/basic.html.haml
+++ b/test/nizzaTestApp/app/views/layouts/basic.html.haml
@@ -1,14 +1,21 @@
 - content_for :content do
-  %div
-    = link_to_function "go simple cached", "NiceEventDispatcher.dispatch_event('nice.state.CachedTransitionEvent',{transition_id : 'get_a_nice__get_b_nice'})"
-    .one{"data-state" => "get_nice_a"}
-      %h1 Container State A only
+  %h1 This is basic demonstration of State Changes
+
+  .subnav.subnav-fixed
+    %ul.nav.nav-pills
+      %li{:class => current_page?(a_basic_index_path) ? "active" : ""}
+        = link_to "State A", a_basic_index_path, :remote => :true
+      %li{:class => current_page?(b_basic_index_path) ? "active" : ""}
+        = link_to "State B", b_basic_index_path, :remote => :true
+      %li{:class => current_page?(c_basic_index_path) ? "active" : ""}
+        = link_to "State C", c_basic_index_path, :remote => :true
+
+  .hero-unit.span5
+    %h1{"data-state" => "get_basic_a"} State A
+    %h1{"data-state" => "get_basic_b"} State B
+    %h1{"data-state" => "get_basic_c"} State C
+
+    %p{"data-state" => "get_basic_a get_basic_b", "data-state-update" => :yes}
       = yield(:container1)
-    .two{"data-state" => "get_nice_b"}
-      %h1 Container State B only
-      = yield(:container1)
-    .three{"data-state" => "get_nice_a get_nice_b", "data-state-update" => :yes}
-      %h1 Container shared in A and B
-      = yield(:container2)
 
 = render :template => 'layouts/application'
