working on example app - improving UI

--- a/test/nizzaTestApp/app/views/basic/a.html.haml
+++ b/test/nizzaTestApp/app/views/basic/a.html.haml
@@ -1,5 +1,2 @@
 - content_for :container1 do
-  state a, time now: 
-  = Time.now
-- content_for :container2 do
-  %p state a    
+	= "Time: #{Time.now.asctime}"
