--- a/test/nizzaTestApp/app/assets/stylesheets/application.css
+++ b/test/nizzaTestApp/app/assets/stylesheets/application.css
@@ -8,8 +8,8 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require_tree . 
  *= require_self
- *= require_tree .
 */
 
 body {
@@ -20,4 +20,13 @@ body {
 
 .row{
 	margin-bottom: 20px;
+}
+
+.right{
+	float: right;
+}
+
+footer{
+
+	margin-top: 100px;
 }
