--- a/test/nizzaTestApp/app/assets/stylesheets/application.css
+++ b/test/nizzaTestApp/app/assets/stylesheets/application.css
@@ -7,10 +7,12 @@
  *
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
- *
+ *= require config
  *= require_tree . 
  *= require_self
 */
+
+
 
 body {
 
